# flare

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
_functions/: convert.py  google_search.py  open_program.py  open_website.py
src/: App.tsx  constants.ts  global.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/hooks/: useAutocomplete.ts  useConfig.ts  useFocused.ts  useGlobalShortcut.ts  useGpt.ts  usePlaceholder.ts
src/utils/: config.ts
