[package]
name = "flare"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "clipboard-all", "shell-execute", "system-tray", "path-all", "dialog-open", "global-shortcut-all", "fs-create-dir", "fs-remove-file", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-exists"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.1.2"
window-vibrancy = "0.3.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
